Ajuste no código para implementação dos KPIs